--- a/styles/style.css
+++ b/styles/style.css
@@ -64,7 +64,11 @@ h2 {
     display: none;
 }
 
-/* LABEL STYLES */
+.hide {
+    visibility: hidden;
+}
+
+/* FORM STYLES */
 
 label {
     width: calc((100% - 100px)/3);
@@ -104,7 +108,17 @@ input[type="radio"] {
 }
 
 .choices label:hover .selected-icon,
-.choices label:focus .selected-icon {
+.choices label:focus .selected-icon,
+input:checked + label .selected-icon {
     opacity: 1;
     visibility: visible
+}
+
+
+.btn {
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    background: #E40015;
+    color: #FFFFFF;
+    padding: 10px 30px;
 }
